# lego-lcd

./: .gitignore  Lego-Box.stl  Lego-Lid.stl  README.md  clock.py  install-deps.sh  kbd.pyx  lcd-clock.service  lcd_helper.py  pyproject.toml  setup.py  wifi_selection.py  wpa-supplicant-info.txt
lego_lcd/: clock.py  lcd.pyx  lcd_helper.py  setup.py  wifi.py  wiringpi.pxd
lego_lcd/wifi_connect/: README.md  __init__.py  defaults.py  dnsmasq.py  http_server.py  install-network-manager.sh  netman.py  utils.py
lego_lcd/wifi_connect/ui/: index.html
lego_lcd/wifi_connect/ui/css/: styles.css
lego_lcd/wifi_connect/ui/js/: index.js  script.js
