[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "Cython"]

[project]
name = "lego-lcd"
version = "0.1"
readme = "README.md"
requires-python = ">= 3.8"
lcd-clock = "clock:main"
dependencies = [
    "Cython",
    "wiringpi",
    "RPi.GPIO",
]
