[build-system]
requires = ["setuptools >= 61.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "lego-lcd"
version = "0.1"
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "Cython",
    "wiringpi",
    "RPi.GPIO",
]

[project.scripts]
lcd-clock = "clock:main"
